// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main page 1`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI</a>
</header>
<!--Header-->
<main>
  <div class=\\"page-data-loading\\">
    <div class=\\"sk-cube-grid\\">
      <div class=\\"sk-cube sk-cube1\\"></div>
      <div class=\\"sk-cube sk-cube2\\"></div>
      <div class=\\"sk-cube sk-cube3\\"></div>
      <div class=\\"sk-cube sk-cube4\\"></div>
      <div class=\\"sk-cube sk-cube5\\"></div>
      <div class=\\"sk-cube sk-cube6\\"></div>
      <div class=\\"sk-cube sk-cube7\\"></div>
      <div class=\\"sk-cube sk-cube8\\"></div>
      <div class=\\"sk-cube sk-cube9\\"></div>
    </div>
  </div>
  <!--PageDataLoading-->
  <!--if-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;

exports[`main page 2`] = `
"<header>
  <a href=\\"\\" class=\\"logo\\">Simple CI</a>
</header>
<!--Header-->
<main>
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-list\\">
    <a class=\\"project-card\\" href=\\"#\\"><span class=\\"name\\">Test</span></a>
    <a class=\\"project-card\\" href=\\"#\\"><span class=\\"name\\">Test2</span></a>
    <!--for-->
    <a class=\\"project-card project-card-create\\" href=\\"/projects/create\\">
      <div class=\\"create-icon\\"></div>
    </a>
  </div>
  <!--ProjectsList-->
  <!--if-->
</main>
<footer> Sham 2018 </footer>
<!--Footer-->"
`;
